# real-estate-investor

./: .gitignore  IMPLEMENTATION_REPORT.md  README.md  defaults.toml  example.py  pyproject.toml  requirements.txt  simple_app.py  streamlit_app.py  test_streamlit_functionality.py
pages/: buyer_assessment.py  seller_forecast.py
src/bc_real_estate/: __init__.py  buyer.py  comparison.py  config.py  models.py  seller.py  utils.py
streamlit_app/: __init__.py
streamlit_app/pages/: __init__.py  scenario_comparison.py
tests/: __init__.py  conftest.py  test_buyer.py  test_comparison.py  test_config.py  test_seller.py  test_utils.py
tests/fixtures/: test_config.toml
